<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:layout_margin="20dp"
        android:text="@string/MainHeading"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ball"
        android:padding="4dp"
        android:layout_margin="20dp"
        android:layout_toStartOf="@+id/heading"
        android:layout_toLeftOf="@+id/heading" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ball"
        android:padding="4dp"
        android:layout_margin="20dp"
        android:layout_toEndOf="@+id/heading"
        android:layout_toRightOf="@+id/heading" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/teamA"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_NewYork_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/DefaultValue"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/sixForNewYork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@color/buttonBackgroundColorNewYork"
                    android:textAllCaps="false"
                    android:text="@string/touchdown_6"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/threeForNewYork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/buttonBackgroundColorNewYork"
                    android:layout_marginRight="24dp"
                    android:textAllCaps="false"
                    android:text="@string/fieldGoal_3"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/twoSafetyForNewYork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:background="@color/buttonBackgroundColorNewYork"
                    android:textAllCaps="false"
                    android:text="@string/saftey_2"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/oneForNewYork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/buttonBackgroundColorNewYork"
                    android:layout_marginRight="24dp"
                    android:textAllCaps="false"
                    android:text="@string/point_1"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/towForNewYork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:background="@color/buttonBackgroundColorNewYork"
                    android:textAllCaps="false"
                    android:text="@string/point_2"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray">

            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/teamB"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_Chicago_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/DefaultValue"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/sixForChicago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@color/buttonBackgroundColorChicago"
                    android:textAllCaps="false"
                    android:text="@string/touchdown_6"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/threeForChicago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/buttonBackgroundColorChicago"
                    android:layout_marginRight="24dp"
                    android:textAllCaps="false"
                    android:text="@string/fieldGoal_3"
                    android:textColor="@color/white"
                    />


                <Button
                    android:id="@+id/TwoSafetyForChicago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:background="@color/buttonBackgroundColorChicago"
                    android:textAllCaps="false"
                    android:text="@string/saftey_2"
                    android:textColor="@color/white"

                    />

                <Button
                    android:id="@+id/OneForChicago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/buttonBackgroundColorChicago"
                    android:layout_marginRight="24dp"
                    android:textAllCaps="false"
                    android:text="@string/point_1"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/TwoForChicago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/buttonBackgroundColorChicago"
                    android:layout_marginRight="24dp"
                    android:textAllCaps="false"
                    android:text="@string/point_2"
                    android:textColor="@color/white"
                    />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>



    <Button
        android:id="@+id/ResetAllScores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:background="@color/resetButtonColor"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:text="@string/ButtonReset" />


</RelativeLayout>